--- a/src/index.html
+++ b/src/index.html
@@ -119,7 +119,10 @@
             style="background-image: linear-gradient(90deg, rgba(102,69,232,1.00) 8%, rgba(126,73,244,1.00) 53%, rgba(149,74,244,1.00) 89%); background-position: center center; background-size: cover;">
         </div>
         <div class="relative z-10 lg:mx-0 flex flex-col lg:flex-row">
-            <div class="w-full lg:w-1/2 h-60vmin bg-cover">
+            <div class="hidden lg:flex justify-center items-center w-full lg:w-1/2 h-60vmin bg-cover">
+                <img src="./img/shiba-hero-freigestellt-2.webp" alt="Hero image" class="w-full h-full object-cover overflow-visible" style="max-width: 70%;">
+            </div>
+            <div class="lg:hidden">
                 <img src="./img/shiba-hero.png" alt="Hero image" class="w-full h-full object-cover">
             </div>
             <div class="w-full px-4 my-auto lg:px-8 lg:mx-auto lg:w-1/2">
@@ -145,6 +148,7 @@
             </div>
         </div>
     </header>
+    
 
 
     <main>
