changed hover effect on nav items

--- a/src/index.html
+++ b/src/index.html
@@ -67,17 +67,17 @@
 
         <!-- Navigation links -->
         <div id="menuItems" class="hidden lg:flex lg:flex-row lg:flex-wrap lg:items-center lg:space-x-4">
-            <a href="#preview-web-app" class="block lg:hover:underline lg:hover:underline-offset-8 lg:px-4 lg:py-2">App
+            <a href="#preview-web-app" class="block lg:hover:underline lg:hover:underline-offset-8 lg:hover:decoration-2 lg:px-4 lg:py-2">App
                 Preview</a>
             <a href="#list-of-benefits"
-                class="block lg:hover:underline lg:hover:underline-offset-8 lg:px-4 lg:py-2">Your
+                class="block lg:hover:underline lg:hover:underline-offset-8 lg:hover:decoration-2 lg:px-4 lg:py-2">Your
                 Benefits</a>
-            <a href="#how-does-it-work" class="block lg:hover:underline lg:hover:underline-offset-8 lg:px-4 lg:py-2">How
+            <a href="#how-does-it-work" class="block lg:hover:underline lg:hover:underline-offset-8 lg:hover:decoration-2  lg:px-4 lg:py-2">How
                 It
                 Works</a>
-            <a href="#offers" class="block lg:hover:underline lg:hover:underline-offset-8 lg:px-4 lg:py-2">Offering</a>
-            <a href="#about" class="block lg:hover:underline lg:hover:underline-offset-8 lg:px-4 lg:py-2">About Us</a>
-            <a href="#contact" class="block lg:hover:underline lg:hover:underline-offset-8 lg:px-4 lg:py-2">Get in
+            <a href="#offers" class="block lg:hover:underline lg:hover:underline-offset-8 lg:hover:decoration-2  lg:px-4 lg:py-2">Offering</a>
+            <a href="#about" class="block lg:hover:underline lg:hover:underline-offset-8 lg:hover:decoration-2  lg:px-4 lg:py-2">About Us</a>
+            <a href="#contact" class="block lg:hover:underline lg:hover:underline-offset-8 lg:hover:decoration-2 lg:px-4 lg:py-2">Get in
                 Contact</a>
         </div>
     </nav>
