Changed button texts and links

--- a/src/index.html
+++ b/src/index.html
@@ -142,9 +142,9 @@
                 </h1>
                 <p class="text-2xl/normal mt-6 mb-12 md:text-1xl/normal lg:text-3xl/loose">
                     Identify and mitigate potential security threats with ThreatShield's threat modelling service</p>
-                <a href="mailto:threatshield@inspired.consulting"
+                <a href="https://app.threatshield.eu/users/register" target="_blank"
                     class="block sm:w-full lg:inline bg-secondary-400 text-center tracking-wider text-secondary-900 hover:text-secondary-950 py-4 px-6 rounded hover:bg-secondary-500 active:bg-secondary-600 transition-all duration-300 hover:ease-in">
-                    <span class="align-middle font-medium">Send Us an E-mail</span>
+                    <span class="align-middle font-medium">Join the Beta</span>
                 </a>
                 <div class="mt-12 pb-8">
                     <span class="hover:text-primary-900">
@@ -386,9 +386,9 @@
                                     </li>
                                 </ul>
                             </div>
-                            <a href="mailto:threatshield@inspired.consulting"
+                            <a href="https://app.threatshield.eu/users/register" target="_blank"
                                 class="w-full bg-primary-500 text-white text-center py-3 mb-4 rounded hover:bg-primary-700 active:bg-primary-500 lg:mt-8 transition-all duration-300 hover:ease-in">
-                                Get In Touch
+                                Try Out the App
                             </a>
                         </div>
                     </div>
@@ -439,9 +439,9 @@
                                     </li>
                                 </ul>
                             </div>
-                            <a href="mailto:threatshield@inspired.consulting"
+                            <a href="https://app.threatshield.eu/users/register" target="_blank"
                                 class="w-full bg-primary-500 text-white text-center py-3 mb-4 lg:mt-8  rounded hover:bg-primary-700 active:bg-primary-500 transition-all duration-300 hover:ease-in">
-                                Get In Touch</a>
+                                Try Out the App</a>
                         </div>
                     </div>
 
@@ -495,9 +495,9 @@
                                     </li>
                                 </ul>
                             </div>
-                            <a href="mailto:threatshield@inspired.consulting"
+                            <a href="https://app.threatshield.eu/users/register" target="_blank"
                                 class="w-full bg-primary-500 text-white text-center py-3 mb-4 lg:mt-8 rounded hover:bg-primary-700 active:bg-primary-500 transition-all duration-300 hover:ease-in">
-                                Get In Touch
+                                Try Out the App
                             </a>
                         </div>
                     </div>
