Update terms of service - name beta phase

--- a/src/terms.html
+++ b/src/terms.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./css/main.css" />
 </head>
 
-<body class="flex flex-col bg-gray-200 min-h-screen mt-6">
+<body class="flex flex-col bg-gray-white min-h-screen mt-6">
 
     <div class="container mx-auto text-left py-12 px-4 max-w-4xl flex-grow">
         <div class="flex justify-between items-center">
@@ -21,19 +21,20 @@
             <a class="btn btn-primary rounded" href="/">Back</a>
         </div>
 
-        <p class="text-gray-700">Last Updated: January 9th, 2024</p>
+        <p class="text-gray-700">Last Updated: April 22nd, 2024</p>
 
         <h2 class="mt-10 font-bold text-xl">Introduction</h2>
         <p class="mt-2">
             Welcome to ThreatShield, a service provided by Inspired Consulting GmbH (“Inspired”). <br />
             These Terms of Service (“ToS”) govern your use of ThreatShield, available at
-            <a href="https://threatshield.eu" class="text-primary-600 hover:text-primary-500 active:text-primary-600 font-semibold underline underline underline-offset-4">https://threatshield.eu</a>.
+            <a href="https://threatshield.eu"
+                class="text-primary-600 hover:text-primary-500 active:text-primary-600 font-semibold underline underline underline-offset-4">https://threatshield.eu</a>.
         </p>
 
         <h2 class="mt-10 font-bold text-xl">Service Description</h2>
         <p class="mt-2">
-            ThreatShield is an open-source software-as-a-service (SaaS) application designed for ThreatModelling and
-            ThreatManagement.
+            ThreatShield is an open-source software-as-a-service (SaaS) application designed for Threat Modelling and
+            Threat Management.
             The service is hosted in Germany and primarily serving the EU market. <br>
             ThreatShield is currently in beta and not yet ready for production use.
         </p>
@@ -41,13 +42,13 @@
         <h2 class="mt-10 font-bold text-xl">Acceptance of Terms</h2>
         <p class="mt-2">
             By accessing or using ThreatShield, you agree to be bound by these ToS. If you do not agree to these terms,
-            do
-            not use ThreatShield.
+            do not use ThreatShield.
         </p>
 
         <h2 class="mt-10 font-bold text-xl">Usage Policy</h2>
         <p class="mt-2">
-            The service is currently provided free of charge and is intended for IT professionals.
+            The service is currently in a <strong>beta phase</strong> and provided free of charge and is intended for IT
+            professionals.
             Users are responsible for the risks associated with the use of the service.
         </p>
 
@@ -72,13 +73,13 @@
             The ToS may be updated periodically, and continued use of the service constitutes acceptance of these
             changes.
         </p>
-       
+
         <h2 class="mt-10 font-bold text-xl">Privacy Policy</h2>
         <p class="mt-2">
             Please refer to our Privacy Policy for information on how we collect, use, and disclose information from our
             users.
         </p>
-       
+
         <h2 class="mt-10 font-bold text-xl">Limitation of Liability</h2>
         <p class="mt-2">
             Inspired shall not be liable for any direct, indirect, incidental, special, or consequential damages
@@ -100,7 +101,9 @@
             <a href="mailto:threatshield@inspired.consulting"
                 class="text-primary-600 hover:text-primary-500 active:text-primary-600 font-semibold underline underline underline-offset-4">threatshield@inspired.consulting</a>.
             <br />
-            See <a href="/imprint.html" class="text-primary-600 hover:text-primary-500 active:text-primary-600 font-semibold underline underline underline-offset-4">our imprint</a> for more contact
+            See <a href="/imprint.html"
+                class="text-primary-600 hover:text-primary-500 active:text-primary-600 font-semibold underline underline underline-offset-4">our
+                imprint</a> for more contact
             information.
         </p>
 
