Update privacy page - moved to CloudFlare pages

--- a/src/privacy.html
+++ b/src/privacy.html
@@ -13,7 +13,7 @@
 </head>
 
 <body class="flex flex-col min-h-screen">
-    
+
     <div class="container mx-auto text-left py-12 px-4 max-w-4xl flex-grow">
         <div class="flex justify-between items-center">
             <h1 class="mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">
@@ -25,40 +25,51 @@
         <p class="text-gray-700">Last Updated: January 10th, 2024</p>
 
         <h2 class="mt-10 font-bold text-xl">Introduction</h2>
-        <p class="mt-2">Welcome to ThreatShield by Inspired Consulting GmbH (“Inspired”). We prioritize your privacy and handle your
+        <p class="mt-2">Welcome to ThreatShield by Inspired Consulting GmbH (“Inspired”). We prioritize your privacy and
+            handle your
             data transparently and responsibly. This policy outlines our practices regarding the collection, use, and
             sharing of your personal data in compliance with the General Data Protection Regulation (GDPR).</p>
 
         <h2 class="mt-10 font-bold text-xl">Hosting and Data Processing Location</h2>
-        <p class="mt-2">ThreatShield is hosted on the Google Cloud Platform (GCP) with servers located in Frankfurt, Germany. We
-            strive to keep all collected data within Frankfurt to ensure high data protection standards.</p>
+        <p class="mt-2">ThreatShield is hosted on the Google Cloud Platform (GCP) with servers located in Frankfurt,
+            Germany. We strive to keep all collected data within Frankfurt to ensure high data protection standards.
+            <br />
+            The website is served by Cloudflare Pages, a service provided by Cloudflare, Inc. Data is processed in
+            compliance with GDPR.
+        </p>
 
         <h2 class="mt-10 font-bold text-xl">Information Collection</h2>
-        <p class="mt-2">We collect information that you provide directly (e.g., during account creation) and information generated
+        <p class="mt-2">We collect information that you provide directly (e.g., during account creation) and information
+            generated
             during your use of our services, like usage data. We may also obtain data from third-party sources as
             needed.</p>
 
         <h2 class="mt-10 font-bold text-xl">Use of Information</h2>
-        <p class="mt-2">Your information is used to provide, maintain, and improve our services. We also use the data to communicate
-            with you and comply with our legal obligations. We do not sell personal data to third parties.</p>
+        <p class="mt-2">Your information is used to provide, maintain, and improve our services. We also use the data to
+            communicate with you and comply with our legal obligations. We do not sell personal data to third parties.
+        </p>
 
         <h2 class="mt-10 font-bold text-xl">User Rights under GDPR</h2>
-        <p class="mt-2">You have the right to access, correct, delete, or limit processing of your personal data as stipulated by
-            GDPR. Contact us to exercise these rights.</p>
+        <p class="mt-2">You have the right to access, correct, delete, or limit processing of your personal data as
+            stipulated by GDPR. Contact us to exercise these rights.</p>
 
         <h2 class="mt-10 font-bold text-xl">Data Security Measures</h2>
-        <p class="mt-2">We implement suitable technical and organizational security measures to protect your data, in line with GDPR
-            requirements.</p>
+        <p class="mt-2">We implement suitable technical and organizational security measures to protect your data, in
+            line with GDPR requirements.</p>
 
         <h2 class="mt-10 font-bold text-xl">Cookies</h2>
-        <p class="mt-2">We only use cookies, when it is technically necessary, e.g. for authentication for registred users.</p>
+        <p class="mt-2">We only use cookies, when it is technically necessary, e.g. for authentication for registred
+            users.
+        </p>
 
         <h2 class="mt-10 font-bold text-xl">International Data Transfers</h2>
-        <p class="mt-2">Your information is processed within the EEA, specifically in Frankfurt, Germany. This ensures that your data
-            is under the protection of GDPR.</p>
+        <p class="mt-2">Your information is processed within the EEA, specifically in Frankfurt, Germany. This ensures
+            that your data is under the protection of GDPR.
+        </p>
 
         <h2 class="mt-10 font-bold text-xl">Policy Amendments</h2>
-        <p class="mt-2">We may update this policy periodically. Any changes will be posted on our website, hosted on GitHub Pages.
+        <p class="mt-2">We may update this policy periodically. Any changes will be posted on our website, hosted on
+            Cloudflare Pages.
         </p>
 
         <h2 class="mt-10 font-bold text-xl">Contact Information</h2>
@@ -66,8 +77,9 @@
             <a href="mailto:threatshield@inspired.consulting"
                 class="text-primary-600 hover:text-primary-500 active:text-primary-600 font-semibold underline underline underline-offset-4">threatshield@inspired.consulting</a>.
             <br />
-            See <a href="/imprint.html" class="text-primary-600 hover:text-primary-500 active:text-primary-600 font-semibold underline underline underline-offset-4">our imprint</a> for more contact
-            information.
+            See <a href="/imprint.html"
+                class="text-primary-600 hover:text-primary-500 active:text-primary-600 font-semibold underline underline underline-offset-4">our
+                imprint</a> for more contact information.
         </p>
     </div>
     {{> footer }}
