--- a/src/privacy.html
+++ b/src/privacy.html
@@ -40,9 +40,8 @@
 
         <h2 class="mt-10 font-bold text-xl">Information Collection</h2>
         <p class="mt-2">We collect information that you provide directly (e.g., during account creation) and information
-            generated
-            during your use of our services, like usage data. We may also obtain data from third-party sources as
-            needed.</p>
+            generated during your use of our services, like usage data. We may also obtain data from third-party sources
+            as needed.</p>
 
         <h2 class="mt-10 font-bold text-xl">Use of Information</h2>
         <p class="mt-2">Your information is used to provide, maintain, and improve our services. We also use the data to
