--- a/src/index.html
+++ b/src/index.html
@@ -202,7 +202,7 @@
                         </div>
                         <div class="flex flex-col items-center">
                             <h3 class="font-bold text-xl/loose mb-2 text-primary-800 text-center">
-                                Simplified Thread Identification
+                                Simplified Threat Identification
                             </h3>
                             <p class="text-center text-gray-700 text-lg/loose">
                                 Effortlessly pinpoint threats to your IT systems and assets. Our AI assistant ensures a
