optimized hero image size on mobile view

--- a/src/index.html
+++ b/src/index.html
@@ -131,7 +131,7 @@
                     class="w-full h-full object-cover overflow-visible" style="max-width: 70%;">
             </div>
             <div class="lg:hidden">
-                <img src="./img/shiba-hero.webp" alt="Hero image" class="w-full h-full object-cover">
+                <img src="./img/shiba-hero3.webp" alt="Hero image" class="w-full h-full object-cover">
             </div>
             <div class="w-full px-4 my-auto lg:px-8 lg:mx-auto lg:w-1/2">
                 <h1
