Optimized hero image: reduced size for better performance

--- a/src/index.html
+++ b/src/index.html
@@ -127,7 +127,7 @@
         </div>
         <div class="relative z-10 lg:mx-0 flex flex-col lg:flex-row">
             <div class="hidden lg:flex justify-center items-center w-full lg:w-1/2 h-60vmin bg-cover">
-                <img src="./img/shiba-hero-freigestellt-2.1.webp" alt="Hero image"
+                <img src="./img/shiba-hero-freigestellt-2.1 Kopie2.webp" alt="Hero image"
                     class="w-full h-full object-cover overflow-visible" style="max-width: 70%;">
             </div>
             <div class="lg:hidden">
