--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,11 @@
     <!-- BANNER -->
     <div
         class="bg-secondary-400 text-secondary-900 text-center font-semibold py-2 px-8 w-full flex items-center justify-center space-x-2 text-xs">
+        <span class="relative flex h-2 w-2 mr-2">
+            <span
+                class="animate-ping absolute inline-flex h-full w-full rounded-full bg-secondary-700 opacity-75"></span>
+            <span class="relative inline-flex rounded-full h-2 w-2 bg-secondary-700"></span>
+        </span>
         Free interactive workshop for first requests!
     </div>
 
@@ -144,7 +149,7 @@
                     Identify and mitigate potential security threats with ThreatShield's threat modelling service</p>
                 <a href="https://app.threatshield.eu/users/register" target="_blank"
                     class="block sm:w-full lg:inline bg-secondary-400 text-center tracking-wider text-secondary-900 hover:text-secondary-950 py-4 px-6 rounded hover:bg-secondary-500 active:bg-secondary-600 transition-all duration-300 hover:ease-in">
-                    <span class="font-medium">Join the beta</span>
+                    <span class="font-medium">Join our beta</span>
                 </a>
                 <div class="mt-12 pb-8">
                     <span class="hover:text-primary-900">
@@ -175,7 +180,7 @@
                     </p>
                 </div>
                 <div class="lg:w-1/2">
-                    <img src="./img/macmockup.webp" alt="Vorschaubild von der Anwendung"
+                    <img src="./img/preview-systems.webp" alt="Preview image of the app interface"
                         class="mt-12 max-h-full lg:mt-0">
                 </div>
             </div>
@@ -259,85 +264,112 @@
 
         <!-- HOW DOES IT WORK -->
 
-        <section id="how-does-it-work" class="w-full bg-primary-200">
-            <div class="container mx-auto h-full py-20 px-4">
-                <h3 class="text-center leading-normal text-primary-800 mb-4 uppercase">HOW DOES IT WORK</h3>
-                <hr class="border-t-2 border-primary-300 w-48 mx-auto my-4">
-                <h2 class="text-4xl/normal mb-8 font-bold text-center text-primary-800 pt-2">
-                    3 simple steps
-                </h2>
-                <div class="flex flex-col lg:flex-row items-center lg:justify-between pt-6">
+        <section id="how-does-it-work" class="w-full bg-primary-200 py-12">
+            <div class="container mx-auto px-4 flex flex-col gap-10">
+                <div class="flex flex-col gap-4">
+                    <h3 class="text-center leading-normal text-primary-800 uppercase">How to ensure your security
+                    </h3>
+                    <hr class="border-t-2 border-primary-300 w-72 mx-auto">
+                    <h2 class="text-4xl/normal font-bold text-center text-primary-800 mb-4">
+                        3 simple steps to start
+                    </h2>
+                </div>
 
-                    <!-- CARD 1 -->
+                <!-- Step 1 -->
 
-                    <div
-                        class="max-w-sm rounded bg-gray-100 overflow-hidden mb-8 p-6 mx-auto w-full lg:mx-0 lg:mb-0 lg:mr-6">
-                        <div class="flex flex-col items-center">
-                            <svg width="48" height="48" viewBox="0 0 48 48" fill="none"
-                                xmlns="http://www.w3.org/2000/svg" style="max-width: 48px;">
-                                <rect width="48" height="48" rx="8" fill="#5426AA" />
-                                <path
-                                    d="M26.6374 14.5455V32H22.9471V18.0483H22.8448L18.8477 20.554V17.2812L23.1687 14.5455H26.6374Z"
-                                    fill="#F8F6FB" />
-                            </svg>
-                            <h3 class="font-bold text-xl/relaxed mt-6 mb-2 text-primary-800 text-center">
-                                Initial consultation
-                            </h3>
-                            <p class="text-center text-gray-700 text-lg/relaxed">
+                <div class="flex flex-col md:flex-row items-center justify-between gap-6">
+                    <div class="flex flex-col w-full md:w-1/2">
+                        <div class="flex flex-col gap-3">
+                            <div class="flex flex-col md:flex-row items-center gap-4">
+                                <svg width="32" height="32" viewBox="0 0 48 48" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg" style="max-width: 48px">
+                                    <rect width="48" height="48" rx="8" fill="#5426AA" />
+                                    <path
+                                        d="M26.6374 14.5455V32H22.9471V18.0483H22.8448L18.8477 20.554V17.2812L23.1687 14.5455H26.6374Z"
+                                        fill="#F8F6FB" />
+                                </svg>
+                                <h3 class="font-bold text-xl/relaxed text-primary-800 text-left">
+                                    Initial consultation
+                                </h3>
+                            </div>
+                            <p class="text-center md:text-left text-gray-700 text-lg/relaxed">
                                 Reach out for a preliminary discussion, followed by scheduling our specialized threat
-                                modelling workshop.</p>
+                                modelling workshop.
+                            </p>
                         </div>
                     </div>
+                    <div class="flex justify-end border-primary-700 border-8 rounded bg-primary-700">
+                        <img src="./img/consultation.webp" alt="Two businessmen having a conversation in a meeting room"
+                            class="object-contain" style="max-height:306px">
+                    </div>
+                </div>
 
-                    <div class="arrow"></div>
+                <!-- Step 2 -->
 
-                    <!-- CARD 2 -->
-
-                    <div
-                        class="max-w-sm rounded bg-gray-100 overflow-hidden mb-8 p-6 mx-auto w-full lg:mx-0 lg:mb-0 lg:mr-6">
-                        <div class="flex flex-col items-center">
-                            <svg width="48" height="48" viewBox="0 0 48 48" fill="none"
-                                xmlns="http://www.w3.org/2000/svg" style="max-width: 48px;">
-                                <rect width="48" height="48" rx="8" fill="#5426AA" />
-                                <path
-                                    d="M17.3562 32V29.3409L23.5692 23.5881C24.0977 23.0767 24.5408 22.6165 24.8988 22.2074C25.2624 21.7983 25.538 21.3977 25.7255 21.0057C25.913 20.608 26.0067 20.179 26.0067 19.7188C26.0067 19.2074 25.8903 18.767 25.6573 18.3977C25.4244 18.0227 25.1062 17.7358 24.7028 17.5369C24.2994 17.3324 23.842 17.2301 23.3306 17.2301C22.7965 17.2301 22.3306 17.3381 21.9329 17.554C21.5352 17.7699 21.2283 18.0795 21.0124 18.483C20.7965 18.8864 20.6886 19.3665 20.6886 19.9233H17.1857C17.1857 18.7812 17.4442 17.7898 17.9613 16.9489C18.4783 16.108 19.2028 15.4574 20.1346 14.9972C21.0664 14.5369 22.1403 14.3068 23.3562 14.3068C24.6062 14.3068 25.6942 14.5284 26.6204 14.9716C27.5522 15.4091 28.2766 16.017 28.7937 16.7955C29.3107 17.5739 29.5692 18.4659 29.5692 19.4716C29.5692 20.1307 29.4386 20.7812 29.1772 21.4233C28.9215 22.0653 28.4641 22.7784 27.805 23.5625C27.146 24.3409 26.217 25.2756 25.0181 26.3665L22.4698 28.8636V28.983H29.7994V32H17.3562Z"
-                                    fill="#F8F6FB" />
-                            </svg>
-                            <h3 class="font-bold text-xl/relaxed mt-6 mb-2 text-primary-800 text-center">
-                                Interactive workshop
-                            </h3>
-                            <p class="text-center text-gray-700 text-lg/relaxed">
+                <div class="flex flex-col-reverse md:flex-row items-center justify-between gap-8">
+                    <div class="flex justify-end border-primary-700 border-8 rounded bg-primary-700">
+                        <img src="./img/workshop.webp" alt="A team in the office discussing during a threat modeling workshop"
+                            class="object-contain" style="max-height:306px">
+                    </div>
+                    <div class="flex flex-col items-center md:items-start gap-6 w-full md:w-1/2">
+                        <div class="flex flex-col gap-3">
+                            <div class="flex flex-col md:flex-row items-center gap-4">
+                                <svg width="32" height="32" viewBox="0 0 48 48" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg" style="max-width: 48px;">
+                                    <rect width="48" height="48" rx="8" fill="#5426AA" />
+                                    <path
+                                        d="M17.3562 32V29.3409L23.5692 23.5881C24.0977 23.0767 24.5408 22.6165 24.8988 22.2074C25.2624 21.7983 25.538 21.3977 25.7255 21.0057C25.913 20.608 26.0067 20.179 26.0067 19.7188C26.0067 19.2074 25.8903 18.767 25.6573 18.3977C25.4244 18.0227 25.1062 17.7358 24.7028 17.5369C24.2994 17.3324 23.842 17.2301 23.3306 17.2301C22.7965 17.2301 22.3306 17.3381 21.9329 17.554C21.5352 17.7699 21.2283 18.0795 21.0124 18.483C20.7965 18.8864 20.6886 19.3665 20.6886 19.9233H17.1857C17.1857 18.7812 17.4442 17.7898 17.9613 16.9489C18.4783 16.108 19.2028 15.4574 20.1346 14.9972C21.0664 14.5369 22.1403 14.3068 23.3562 14.3068C24.6062 14.3068 25.6942 14.5284 26.6204 14.9716C27.5522 15.4091 28.2766 16.017 28.7937 16.7955C29.3107 17.5739 29.5692 18.4659 29.5692 19.4716C29.5692 20.1307 29.4386 20.7812 29.1772 21.4233C28.9215 22.0653 28.4641 22.7784 27.805 23.5625C27.146 24.3409 26.217 25.2756 25.0181 26.3665L22.4698 28.8636V28.983H29.7994V32H17.3562Z"
+                                        fill="#F8F6FB" />
+                                </svg>
+                                <h3 class="font-bold text-xl/relaxed text-primary-800 text-left">
+                                    Interactive workshop
+                                </h3>
+                            </div>
+                            <p class="text-center md:text-left text-gray-700 text-lg/relaxed">
                                 Participate in a 2-hour hands-on workshop using your system as a case study to create an
-                                initial threat model and learn how to effectively use ThreatShield.</p>
+                                initial threat model and learn how to effectively use ThreatShield.
+                            </p>
                         </div>
-                        <div
-                            class="border-dashed border-2 border-secondary-500 px-4 py-2 rounded-md my-4 text-secondary-500 text-center">
-                            <span class="text-xs/relaxed"><b>Be quick:</b></span><br>
-                            Free of charge for rirst requests
+                        <div class="border border-2 border-gray-400 px-2 py-2 rounded-lg text-secondary-700 text-center">
+                            <span class="text-xs/relaxed font-semibold">Be quick: free of charge for first requests</span>
                         </div>
                     </div>
+                </div>
+                
 
-                    <!-- CARD 3 -->
+                <!-- Step 3 -->
 
-                    <div
-                        class="max-w-sm rounded bg-gray-100 overflow-hidden mb-8 p-6 mx-auto w-full lg:mx-0 lg:mb-0 lg:mr-6">
-                        <div class="flex flex-col items-center">
-                            <svg width="48" height="48" viewBox="0 0 48 48" fill="none"
-                                xmlns="http://www.w3.org/2000/svg" style="max-width: 48px;">
-                                <rect width="48" height="48" rx="8" fill="#5426AA" />
-                                <path
-                                    d="M23.4563 32.2386C22.1836 32.2386 21.0501 32.0199 20.0558 31.5824C19.0671 31.1392 18.2859 30.5312 17.712 29.7585C17.1438 28.9801 16.8512 28.0824 16.8342 27.0653H20.5501C20.5728 27.4915 20.712 27.8665 20.9677 28.1903C21.229 28.5085 21.5756 28.7557 22.0075 28.9318C22.4393 29.108 22.9251 29.196 23.4648 29.196C24.0273 29.196 24.5245 29.0966 24.9563 28.8977C25.3881 28.6989 25.7262 28.4233 25.9705 28.071C26.2148 27.7187 26.337 27.3125 26.337 26.8523C26.337 26.3864 26.2063 25.9744 25.945 25.6165C25.6893 25.2528 25.32 24.9687 24.837 24.7642C24.3597 24.5597 23.7915 24.4574 23.1325 24.4574H21.5046V21.7472H23.1325C23.6893 21.7472 24.1808 21.6506 24.6069 21.4574C25.0387 21.2642 25.3739 20.9972 25.6126 20.6562C25.8512 20.3097 25.9705 19.9062 25.9705 19.446C25.9705 19.0085 25.8654 18.625 25.6552 18.2955C25.4506 17.9602 25.1609 17.6989 24.7859 17.5114C24.4165 17.3239 23.9847 17.2301 23.4904 17.2301C22.9904 17.2301 22.533 17.321 22.1183 17.5028C21.7035 17.679 21.3711 17.9318 21.1211 18.2614C20.8711 18.5909 20.7376 18.9773 20.7205 19.4205H17.1836C17.2006 18.4148 17.4876 17.5284 18.0444 16.7614C18.6012 15.9943 19.3512 15.3949 20.2944 14.9631C21.2433 14.5256 22.3143 14.3068 23.5075 14.3068C24.712 14.3068 25.766 14.5256 26.6694 14.9631C27.5728 15.4006 28.2745 15.9915 28.7745 16.7358C29.2802 17.4744 29.5302 18.304 29.5245 19.2244C29.5302 20.2017 29.2262 21.017 28.6126 21.6705C28.0046 22.3239 27.212 22.7386 26.2347 22.9148V23.0511C27.5188 23.2159 28.4961 23.6619 29.1665 24.3892C29.8427 25.1108 30.1779 26.0142 30.1722 27.0994C30.1779 28.0938 29.891 28.9773 29.3114 29.75C28.7376 30.5227 27.945 31.1307 26.9336 31.5739C25.9222 32.017 24.7631 32.2386 23.4563 32.2386Z"
-                                    fill="#F8F6FB" />
-                            </svg>
-                            <h3 class="font-bold text-xl/relaxed mt-6 mb-2 text-primary-800 text-center">
-                                Run ThreatShield yourself
-                            </h3>
-                            <p class="text-center text-gray-700 text-lg/relaxed">
+                <div class="flex flex-col md:flex-row items-center justify-between gap-6">
+                    <div class="flex flex-col w-full md:w-1/2">
+                        <div class="flex flex-col gap-3">
+                            <div class="flex flex-col md:flex-row items-center md:items-start gap-4">
+                                <svg width="32" height="32" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg" style="max-width: 48px;">
+                                    <rect width="48" height="48" rx="8" fill="#5426AA" />
+                                    <path
+                                        d="M23.4563 32.2386C22.1836 32.2386 21.0501 32.0199 20.0558 31.5824C19.0671 31.1392 18.2859 30.5312 17.712 29.7585C17.1438 28.9801 16.8512 28.0824 16.8342 27.0653H20.5501C20.5728 27.4915 20.712 27.8665 20.9677 28.1903C21.229 28.5085 21.5756 28.7557 22.0075 28.9318C22.4393 29.108 22.9251 29.196 23.4648 29.196C24.0273 29.196 24.5245 29.0966 24.9563 28.8977C25.3881 28.6989 25.7262 28.4233 25.9705 28.071C26.2148 27.7187 26.337 27.3125 26.337 26.8523C26.337 26.3864 26.2063 25.9744 25.945 25.6165C25.6893 25.2528 25.32 24.9687 24.837 24.7642C24.3597 24.5597 23.7915 24.4574 23.1325 24.4574H21.5046V21.7472H23.1325C23.6893 21.7472 24.1808 21.6506 24.6069 21.4574C25.0387 21.2642 25.3739 20.9972 25.6126 20.6562C25.8512 20.3097 25.9705 19.9062 25.9705 19.446C25.9705 19.0085 25.8654 18.625 25.6552 18.2955C25.4506 17.9602 25.1609 17.6989 24.7859 17.5114C24.4165 17.3239 23.9847 17.2301 23.4904 17.2301C22.9904 17.2301 22.533 17.321 22.1183 17.5028C21.7035 17.679 21.3711 17.9318 21.1211 18.2614C20.8711 18.5909 20.7376 18.9773 20.7205 19.4205H17.1836C17.2006 18.4148 17.4876 17.5284 18.0444 16.7614C18.6012 15.9943 19.3512 15.3949 20.2944 14.9631C21.2433 14.5256 22.3143 14.3068 23.5075 14.3068C24.712 14.3068 25.766 14.5256 26.6694 14.9631C27.5728 15.4006 28.2745 15.9915 28.7745 16.7358C29.2802 17.4744 29.5302 18.304 29.5245 19.2244C29.5302 20.2017 29.2262 21.017 28.6126 21.6705C28.0046 22.3239 27.212 22.7386 26.2347 22.9148V23.0511C27.5188 23.2159 28.4961 23.6619 29.1665 24.3892C29.8427 25.1108 30.1779 26.0142 30.1722 27.0994C30.1779 28.0938 29.891 28.9773 29.3114 29.75C28.7376 30.5227 27.945 31.1307 26.9336 31.5739C25.9222 32.017 24.7631 32.2386 23.4563 32.2386Z"
+                                        fill="#F8F6FB" />
+                                </svg>
+                                <h3 class="font-bold text-xl/relaxed text-primary-800 text-left">
+                                    Run ThreatShield yourself
+                                </h3>
+                            </div>
+                            <p class="text-center md:text-left text-gray-700 text-lg/relaxed">
                                 Easily set up ThreatShield on your own infrastructure and integrate it into your daily
-                                operations, empowering your team to manage threats autonomously.</p>
+                                operations, empowering your team to manage threats autonomously.
+                            </p>
                         </div>
                     </div>
+                    <div class="flex justify-end w-full md:w-1/2">
+                        <img src="./img/mockup-system.webp" alt="Application interface displayed on a computer screen"
+                            class="object-contain sm:max-w-xl w-full" style="max-height:306px">
+                    </div>
+                </div>                
 
+                <div class="flex justify-center">
+                    <a href="https://app.threatshield.eu/users/register" target="_blank"
+                        class="blink bg-primary-500 text-white text-center py-3 px-4 mb-4 rounded hover:bg-primary-700 active:bg-primary-500 lg:mt-8 transition-all duration-300 hover:ease-in">
+                        Join our beta
+                    </a>
                 </div>
         </section>
 
