Flexbox adjustments for better alignment of text and images in section "contact us" and comprimised gif for better performance

--- a/src/img/ThreatShield.html
+++ b/src/img/ThreatShield.html
@@ -509,7 +509,7 @@
                     </h2>
                     <p class="text-xl/relaxed leading-relaxed text-primary-800 mt-2">We'd love to hear from you.</p>
                     <div class="flex justify-center">
-                        <img src="./ThreatShield_files/chatbot.gif" alt="Animated icon" class="w-24 h-24 my-4">
+                        <img src="./ThreatShield_files/chatbot-ezgif.com-speed.gif" alt="Animated icon" class="w-24 h-24 my-4">
                     </div>
                     <a href="mailto:threatshield@inspired.consulting" class="block md:inline-block bg-primary-500 text-white tracking-wider py-4 px-6 rounded hover:bg-primary-700 active:bg-primary-500 transition-all duration-300 hover:ease-in">
                         <span>Send us an e-mail</span>
